name:                docker
version:             0.2.0.0
synopsis:            Haskell wrapper for Docker Remote API
description:         Haskell wrapper for Docker Remove API 1.12
homepage:            https://github.com/denibertovic/docker-hs
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           (c) 2014 Deni Bertovic, 2015 Oleg Grenrus
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental

library
  exposed-modules:     Network.Docker,
                       Network.Docker.Options,
                       Network.Docker.Types,
                       Network.Docker.Utils
  other-extensions:    OverloadedStrings, DeriveFunctor, FlexibleContexts, TemplateHaskell
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8,
                       aeson       >=0.7,
                       bytestring  >=0.10,
                       containers  >=0.5,
                       lens        >=4.2,
                       lens-aeson  >=1.0,
                       network-uri >=2.6.0.1,
                       text        >=1.1,
                       wreq        >=0.3.0.1
  default-language:    Haskell2010
